# nvda_zip

./: .pylintrc  Cargo.toml  Dockerfile  README.md  app.py  docker-compose.yml  dockerfile  license.md  new_deployment.sh  nvda-zip.container  requirements.txt  test.py
.github/: dependabot.yml
nvda_url/: Cargo.toml
nvda_url/src/: lib.rs
nvda_zip/: Cargo.toml
nvda_zip/src/: main.rs
nvda_zip/templates/: 404.html
src/: main.rs
templates/: 404.html
