[package]
name = "nvda_zip"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
