[package]
name = "nvda_url"
version = "0.1.2"
description = "Retrieve download URLs for the NVDA screen reader."
license = "Zlib"
repository = "https://github.com/trypsynth/nvda_zip"
edition = "2024"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.19", default-features = false, features = ["http2", "rustls-tls-webpki-roots"] }
tokio = { version = "1.45.1", default-features = false, features = ["rt", "sync"] }
