[package]
name = "nvda_url"
version = "0.1.3"
description = "Retrieve download URLs for the NVDA screen reader."
license = "MIT"
repository = "https://github.com/trypsynth/nvda_zip"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "rustls-tls-webpki-roots"] }
tokio = { version = "1.48.0", default-features = false, features = ["rt", "sync"] }
