[package]
name = "nvda_zip"
version = "0.3.0"
repository = "https://github.com/trypsynth/nvda_zip"
license = "MIT"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
askama = "0.14.0"
env_logger = "0.11.8"
nvda_url = { version = "0.1.2", path = "../nvda_url" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", default-features = false, features = ["rt", "sync"] }
