[package]
name = "nvda_zip"
version = "0.4.0"
repository = "https://github.com/trypsynth/nvda_zip"
license = "MIT"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
askama = "0.15.1"
env_logger = "0.11.8"
nvda_url = { path = "../nvda_url" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", default-features = false, features = ["rt", "sync"] }
